bio tweaks, contrast ratio color fix, logo change

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,4 +1,4 @@
-$neutral: #9b9b9b;
+$neutral: #757575;
 $bright: #497aa5;
 $light: #dfdfdf;
 $white: #fff;
